# Copyright (C) 1999 Scott Thomas Haug <sth2@cs.wustl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = \
  adler32.c  \
  compress.c \
  crc32.c    \
  deflate.c  \
  gzio.c     \
  infblock.c \
  infcodes.c \
  inffast.c  \
  inflate.c  \
  inftrees.c \
  infutil.c  \
  trees.c    \
  uncompr.c  \
  zutil.c

